BB-113 update client
